fix: Return 404 instead of 500 for ResourceNotFoundException
Add explicit handler for ResourceNotFoundException in GlobalExceptionHandler
to return proper 404 status. This fixes the subscription API error in the
mobile app when a user has no subscription.

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>